--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body{
     -webkit-font-smoothing: antialiased;
     background-color: #000;
     color: #999;
+    width: 100vw;
+    min-width: 320px;
 }
 
 ul{
@@ -45,6 +47,9 @@ input{
     height: 100vh;
     position: relative;
     background: url(/img/background.jpg) no-repeat center center/cover ;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     
 }
 
@@ -62,9 +67,9 @@ input{
 
 .showcase-top{
     position:relative;
+    width: 100%;
     height: 90px;
     z-index: 2;
-    
 }
 .showcase-top img{
     width: 150px;
@@ -72,6 +77,7 @@ input{
     top: 50%;
     left: 55px;
     transform: translate(0, -50%);
+    object-fit: cover;
 }
 
 .showcase-top a{
@@ -86,17 +92,19 @@ input{
 
 .showcase-content{
     z-index: 2;
+    max-width: 730px;
     height: 60%;
-    width: 60%;
-    position: absolute;
-    left: 20%;
+    width: 90%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
     margin-top: 5rem;
+
 }
+
+
 
 .showcase-content h1{
     font-size: 50px;
@@ -109,19 +117,19 @@ input{
     margin-top: 15px;
     text-align: center;
 }
+
 .input-wrapper{
     margin-top: 20px;
     display: flex;
-    height: 70px;
-    width: 700px;
-    background-color: #999;
+    height: 60px;
+    width: 100%;
     
 }
 .input-wrapper input{
     width: 70%;
     height: 100%;
     padding: 0 20px;
-
+    
 }
 .input-wrapper .btn-sign{
     width: 30%;
@@ -144,41 +152,46 @@ hr{
     border: none;
 }
 .tabs{
-    height: 60vh;
+   
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-
+    
+    
 }
 .tabs .container{
-    width: 70%;
-    height: 350px;
+    max-width: 1100px;
+    min-width: 620px;
+    min-height: 420px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    padding: 60px 120px;
+    justify-content: space-between;
+    
 }
 .moldure-img-tv{
     position: relative;
-    height: 100%;
-    width: 416px;
+    max-width: 600px;
+    min-width: 320px;
 }
 .video-tv{
     position: absolute;
-    width: 350px;
-    top: 58px;
+    width: 77%;
+    top: 67px;
     left: 50px;
     z-index: -1;
 }
 .video-tv2{
     position:absolute;
-    width: 250px;
-    left: 82px;
+    width: 63%;
+    left: 18%;
     top: 35px;
     z-index: -1;
 }
 .text{
     width: 60%;
+    padding: 0 15px;
 }
 .text h2{
     font-size: 48px;
@@ -194,7 +207,7 @@ hr{
 }
 
 .questions{
-    height: 120vh;
+    padding: 50px 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -202,20 +215,20 @@ hr{
     
 }
 .questions .container{
-    padding: 80px;
-    width: 70%;
+    width: 80%;
+    max-width: 750px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 .questions .container h2{
-    font-size: 48px;
-    margin-bottom: 60px;
+    font-size: 45px;
+    margin-bottom: 20px;
 }
 .questions .question-wrapper{
     margin: 5px;
     padding: 20px;
-    height: 60px;
+    height: 70px;
     width: 100%;
     background-color: #303030;
     display: flex;
@@ -228,10 +241,14 @@ hr{
     color: #ffff;
 }
 .svg-icon.svg-icon-thin-x.svg-closed{
-    height: 20px;
+    height: 25px;
     transform: rotateZ(45deg);
 }
 
+.contact{
+    margin-top: 60px;
+    padding: 0 20px;
+}
 
 .more-info{
     display: flex;
@@ -283,6 +300,116 @@ hr{
     content: '\e896';
 }
 
+@media screen and (max-width:950px){
+    .showcase-top img{
+        width: 100px;
+    }
+    .input-wrapper{
+        display:flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        height: 100px;
+    }
+    .input-wrapper input{
+        width: 80%;
+        height: 55px ;
+    }
+    .input-wrapper .btn-sign{
+        margin-top: 10px;
+        height: 35px ;
+        width: 110px;
+        font-size: 16px;
+        padding: 10px;
+    }
+    .tabs .container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 70px 0;
+       
+    }
 
+    .tabs .mob{
+        order: 1;
+    }
 
+    .video-tv{
+        position: absolute;
+        width: 77%;
+        top: 67px;
+        left: 50px;
+        z-index: -1;
+    }
+    .text{
+        width: 100%;
+        padding: 0 40px;
+        
+    }
+    .text h2{
+        text-align: center;
+        font-size: 35px;
+    }
+    .text p{
+        text-align: center;
+        font-size: 20px !important;
+    }
 
+    .questions .container h2{
+        font-size: 35px;
+    }
+
+    .questions .container .question-wrapper{
+        font-size: 18px;
+        height: 50px;
+        padding: 20px;
+    }
+    
+    .questions .container .question-wrapper p{
+        font-size: 18px;
+    }
+}
+@media screen and (max-width:730px){
+    .showcase-content h1{
+        font-size: 300% ;
+    }
+    .text h2{
+        text-align: center;
+        font-size: 35px;
+    }
+    .text p{
+        text-align: center;
+        font-size: 12px;
+    }
+    .contact p{
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-width:550px){
+    .showcase-top img{
+        width: 90px;
+    }
+    .showcase-content h1{
+        font-size: 30px ;
+    }
+    .showcase-content p{
+        font-size: 16px ;
+    }
+    .text h2{
+        text-align: center;
+        font-size: 25px;
+    }
+    .text p{
+        text-align: center;
+        font-size: 18px !important;
+    }
+    .questions .container{
+        width: 100%;
+        
+    }
+    .questions .container h2{
+        font-size: 25px;
+    }
+}
