--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ input{
     width: 150px;
     position: absolute;
     top: 50%;
-    left: 55px;
+    left: 5%;
     transform: translate(0, -50%);
     object-fit: cover;
 }
@@ -83,7 +83,7 @@ input{
 .showcase-top a{
     position: absolute;
     top: 50%;
-    right: 70px;
+    right: 5%;
     transform: translateY(-50%);
     background-color: #e50914;
     padding: 8px 16px;
@@ -161,16 +161,16 @@ hr{
     
 }
 .tabs .container{
-    max-width: 1100px;
-    min-width: 620px;
+    max-width: 1200px;
     min-height: 420px;
     display: flex;
     align-items: center;
-    padding: 60px 120px;
+    padding: 60px 10px;
     justify-content: space-between;
     
 }
 .moldure-img-tv{
+    width: 60%;
     position: relative;
     max-width: 600px;
     min-width: 320px;
@@ -192,6 +192,7 @@ hr{
 .text{
     width: 60%;
     padding: 0 15px;
+    
 }
 .text h2{
     font-size: 48px;
@@ -201,10 +202,6 @@ hr{
     font-size: 25px;
 }
 
-.tabs .container .moldure-img{
-    object-fit: cover;
-    width: 500px;
-}
 
 .questions{
     padding: 50px 0;
@@ -255,13 +252,14 @@ hr{
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 60vh;
+
 }
 
 .more-info .container{
-    width: 60%;
-    height: 100%;
-    padding: 60px 0;
+    max-width: 750px;
+    padding: 0 10%;
+    height:100%;
+    padding: 60px 10%;
 }
 
 .more-info .container h3,.more-info .container a{
@@ -273,14 +271,16 @@ hr{
     margin-top: 30px;
     width: 100%;
     height: 80%;
+    
 }
 
 .more-info .container .content .informations{
+    width: 100%;
     height: 80%;
     display: grid;
     grid-template-columns: repeat(4,1fr);
     row-gap: 10px;
-    column-gap: 7px;
+    column-gap: 40px;
 }
 
 .informations a{
@@ -294,11 +294,10 @@ hr{
     color: #757575;
     padding: 10px 20px;
     border-radius: 2px;
+    margin-top: 40px;
 }
 
-.select::before{
-    content: '\e896';
-}
+
 
 @media screen and (max-width:950px){
     .showcase-top img{
@@ -385,6 +384,10 @@ hr{
     .contact p{
         font-size: 16px;
     }
+    .more-info .container .content .informations{
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+    }
 }
 
 @media screen and (max-width:550px){
@@ -411,5 +414,9 @@ hr{
     }
     .questions .container h2{
         font-size: 25px;
+    }
+    .more-info .container .content .informations{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
     }
 }
